# LambdaCat

./: .gitignore  .pydocstyle  ActionList-8-22-25.md  AgentStack_Upgrade_Plan_Kishore.md  Agent_Entity_Spec_Kishore.md  LICENSE  LICENSE.md  LambdaCat-ActionList-1Category.md  LambdaCat-MCP.md  LambdaCat-Monads.md  LambdaCat-Review.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
.reuse/: dep5
LICENSES/: LicenseRef-HNCL-1.0.txt
benchmarks/: async_agent_benchmarks.py
docs/: Async_Agents_Guide.md  LambdaCat-BasicManual (1).md  LambdaCat-BasicManual.md  LambdaCat-BeginnerManual.md  LambdaCat-CompleteManual.md  README.md  agents.md  agents_parallel_choose_guide.md  agents_research_citation.md  core.md  getting-started.md  laws-and-proofs.md  monads.md
docs/diagrams/: C__category.md  Category_C__category.md  Delta3__category.md  DiscreteAB__category.md  F__functor.md  Functor_Id__functor.md  Iso__category.md  Natural_eta__natural.md  Plan__plan.md  README.md  TwoCell_alpha__twocell.md  eta__natural.md
examples/: Advanced_Features_Tutorial.ipynb  Basic_Categories_Tutorial.ipynb  Functors_Naturality_Tutorial.ipynb  advanced_features_demo.py  agent_entity_demo.py  agents_demo.py  cookbook_10_snippets.ipynb  core_walkthrough.ipynb  core_walkthrough_advanced.ipynb  deep_research_agent.py  reactive_watchdog.py  research_agent.py  research_agent_async.py  stretch_features_demo.py
scripts/: check_docs.py
src/LambdaCat/: __init__.py  __main__.py  cli.py
src/LambdaCat/agents/: __init__.py  actions.py  eval.py  runtime.py
src/LambdaCat/agents/cognition/: beliefs.py  memory.py  policy.py
src/LambdaCat/agents/core/: bus.py  compile_async.py  effect.py  instruments.py  laws_effect.py  lens_effect.py  patch.py  persistence.py
src/LambdaCat/agents/entities/: __init__.py  agent.py  bus.py  factory.py  goals.py  policy.py
src/LambdaCat/agents/tools/: http.py  llm.py  search.py
src/LambdaCat/core/: __init__.py  adjunctions.py  builder.py  category.py  convert.py  diagram.py  functor.py  graphviz_helpers.py  hom_helpers.py  laws.py  laws_applicative.py  laws_category.py  laws_functor.py  laws_monad.py  laws_natural.py  limits.py  limits_diagnostics.py  natural.py  ops.py  ops_category.py  optics.py  presentation.py  proofs.py  rewriting.py  standard.py
src/LambdaCat/core/fp/: __init__.py  kleisli.py  laws.py  typeclasses.py
src/LambdaCat/core/fp/instances/: __init__.py  either.py  identity.py  list.py  maybe.py  nonemptylist.py  option.py  reader.py  result.py  semigroup.py  state.py  writer.py
src/LambdaCat/diagrams/: __init__.py
src/LambdaCat/extras/: viz_mermaid.py
src/LambdaCat/functors/: __init__.py
src/LambdaCat/monads/: __init__.py
src/LambdaCat/plugins/: __init__.py
src/LambdaCat/plugins/adapters/: __init__.py
src/LambdaCat/plugins/tamari/: __init__.py
src/LambdaCat/render/: __init__.py  graphviz.py  mermaid.py
tests/: test_agent_entities.py  test_agents_eval.py  test_agents_runtime.py  test_all_laws.py  test_async_agents.py  test_commutativity.py  test_complete_demo.py  test_core.py  test_fp_applicative.py  test_fp_functor.py  test_fp_monad.py  test_fp_reader_writer_state.py  test_graphviz_helpers.py  test_hom_helpers.py  test_kleisli_category.py  test_laws_category.py  test_laws_functor_natural.py  test_limits_diagnostics.py  test_normalize.py  test_rewriting.py  test_stretch_features.py  test_utilities.py
