[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "LambdaCat"
version = "0.1.0"
description = "LambdaCat: functional core for categories with pluginable extras"
authors = ["Kishore Shimikeri <shimikeri.kishore@gmail.com>"]
license = "LicenseRef-HNCL-1.0"
readme = "README.md"
packages = [{ include = "LambdaCat", from = "src" }]
keywords = ["category-theory", "functional", "dsl"]
homepage = "https://github.com/skishore23/LambdaCat"
repository = "https://github.com/skishore23/LambdaCat"
documentation = "https://github.com/skishore23/LambdaCat#readme"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typing-extensions = {version = ">=4.7", python = "<3.11"}

# optional deps (extras; core should not import these at runtime)
networkx = {version = ">=3.1", optional = true}
graphviz = {version = ">=0.20.1", optional = true}
pydot = {version = ">=1.4.2", optional = true}
numpy = {version = ">=1.24", optional = true}
jupyter = "^1.1.1"

[tool.poetry.extras]
tamari = ["networkx"]
viz = ["graphviz", "pydot"]
mcts = ["numpy"]
all = ["networkx", "graphviz", "pydot", "numpy"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
hypothesis = ">=6.98"
mypy = ">=1.8"
ruff = ">=0.5.0"
build = ">=1.2"
twine = ">=5.0"
pytest-cov = ">=5.0"
ipykernel = "^6.30.1"
markdown-it-py = ">=3.0.0"

[tool.ruff]
line-length = 100
extend-select = ["I", "F", "E", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["LambdaCat"]
explicit_package_bases = true
