[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "LambdaCat"
version = "0.1.0"
description = "LambdaCat: functional core for categories with pluginable extras"
authors = ["Kishore Shimikeri <shimikeri.kishore@gmail.com>"]
license = "LicenseRef-HNCL-1.0"
readme = "README.md"
packages = [{ include = "LambdaCat", from = "src" }]
keywords = ["category-theory", "functional", "dsl"]
homepage = "https://github.com/skishore23/LambdaCat"
repository = "https://github.com/skishore23/LambdaCat"
documentation = "https://github.com/skishore23/LambdaCat#readme"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typing-extensions = {version = ">=4.7", python = "<3.11"}
# optional deps (extras; core should not import these at runtime)
networkx = {version = ">=3.1", optional = true}
graphviz = {version = ">=0.20.1", optional = true}
pydot = {version = ">=1.4.2", optional = true}
numpy = {version = ">=1.24", optional = true}
jupyter = "^1.1.1"

[tool.poetry.scripts]
lambdacat = "LambdaCat.cli:main"

[tool.poetry.extras]
tamari = ["networkx"]
viz = ["graphviz", "pydot"]
mcts = ["numpy"]
all = ["networkx", "graphviz", "pydot", "numpy"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-asyncio = ">=0.24"
hypothesis = ">=6.98"
mypy = ">=1.8"
ruff = ">=0.5.0"
build = ">=1.2"
twine = ">=5.0"
pytest-cov = ">=5.0"
aiohttp = ">=3.8.0"
ipykernel = "^6.30.1"
markdown-it-py = ">=3.0.0"

[tool.ruff]
line-length = 100
extend-exclude = ["examples/**/*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W", "B", "UP"]
ignore = [
    "W191",  # indentation-tabs (many files use tabs, will fix systematically)
    "E501",  # line-too-long (preserve long descriptive messages and complex type annotations)
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]  # Allow delayed imports in demo files

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["LambdaCat"]
explicit_package_bases = true

# Allow missing optional dependencies and complex generic edge cases
disable_error_code = [
    "import-not-found",  # Allow missing optional dependencies
    "type-arg",          # Allow missing type parameters in complex generic hierarchies
    "no-any-return",     # Allow Any returns in complex generic utility functions
    "misc",              # Allow type assignment edge cases in complex generic code
    "attr-defined",      # Allow missing attributes on parametrized generic types
    "arg-type",          # Allow argument type mismatches in complex generic hierarchies
    "return-value",      # Allow return value type mismatches in complex generic code
    "assignment",        # Allow assignment type mismatches in generic type construction
    "var-annotated",     # Allow some missing annotations in generic utility functions
    "no-untyped-def",    # Allow untyped definitions in generic utility functions
    "no-untyped-call",   # Allow untyped calls in complex generic scenarios
]

[[tool.mypy.overrides]]
module = [
    "LambdaCat.render.*",
    "LambdaCat.plugins.*", 
    "LambdaCat.agents.*"
]
ignore_errors = true
